fix(bootstrap4-theme): more style work to ensure spacing behaves as expected

--- a/packages/bootstrap4-theme/src/scss/extends/_typography.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_typography.scss
@@ -19,6 +19,10 @@
 }
 
 // If there is a heading between two paragraphs, there needs to be more space above the heading than below it to ensure that content is chunked appropriately and remains legible.
+h1, h2, h3, h4, h5, h6 {
+  margin-top: $uds-size-spacing-2;
+}
+
 p + h1,
 p + h2,
 p + h3,
@@ -28,18 +32,11 @@ p + h6 {
   margin-top: $uds-size-spacing-4;
 }
 
-h1 + p,
-h2 + p,
-h3 + p,
-h4 + p,
-h5 + p,
-h6 + p,
-p + h1:last-child,
-p + h2:last-child,
-p + h3:last-child,
-p + h4:last-child,
-p + h5:last-child,
-p + h6:last-child {
+p:last-of-type + h1,
+p:last-of-type + h2,
+p:last-of-type + h3,
+p:last-of-type + h4,
+p:last-of-type + h5,
+p:last-of-type + h6 {
   margin-top: $uds-size-spacing-2;
 }
-
